--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,18 @@
     tools:context="dice.rav.com.dice.MainActivity">
 
     <TextView
-        android:id="@+id/mainText"
+        android:id="@+id/main_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/welcome_n_click_button_below_to_roll_the_dice" />
 
     <EditText
-        android:id="@+id/minimalValueEditField"
+        android:id="@+id/minimal_value_edit_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/mainText"
+        android:layout_below="@id/main_text"
         android:paddingTop="20dp"
         android:hint="@string/_1"/>
 
@@ -34,31 +34,31 @@
         android:text="@string/roll"
         android:textSize="50sp"/>
     <TextView
-        android:id="@+id/SetMinValueText"
+        android:id="@+id/set_min_value_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/mainText"
+        android:layout_below="@+id/main_text"
         android:paddingTop="20dp"
         android:text="@string/set_minimal_dice_value"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/SetMaxValueText"
+        android:id="@+id/set_max_value_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/SetMinValueText"
+        android:layout_below="@+id/set_min_value_text"
         android:paddingTop="20dp"
         android:text="@string/set_maximal_dice_value"
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/maximumValueField"
+        android:id="@+id/maximum_value_edit_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/minimalValueEditField"
+        android:layout_below="@id/minimal_value_edit_field"
         android:hint="@string/_6"
         android:paddingTop="20dp" />
 </RelativeLayout>
