--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:text="Set rolling range and hit ROLL button to roll the Dice" />
 
     <EditText
-        android:id="@+id/minimal_value_edit_field"
+        android:id="@+id/minimal_value_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -27,13 +27,6 @@
         android:inputType="number"
         android:hint="@string/_1"/>
 
-    <Button
-        android:id="@+id/roll_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="@string/roll"
-        android:textSize="50sp"/>
     <TextView
         android:id="@+id/set_min_value_text"
         android:layout_width="wrap_content"
@@ -55,12 +48,22 @@
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/maximum_value_edit_field"
+        android:id="@+id/maximum_value_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/minimal_value_edit_field"
+        android:layout_below="@id/minimal_value_field"
         android:hint="@string/_6"
         android:inputType="number"
         android:paddingTop="20dp" />
+
+    <Button
+        android:id="@+id/roll_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/roll"
+        android:textSize="50sp"
+        android:layout_below="@+id/maximum_value_field"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
 </RelativeLayout>
