--- a/app/src/main/res/layout/list_item_result.xml
+++ b/app/src/main/res/layout/list_item_result.xml
@@ -5,8 +5,22 @@
     android:layout_height="wrap_content">
 
     <TextView
+
         android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:layout_weight="9"
+        android:layout_gravity="center_vertical">
+
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_delete"
+        android:layout_weight="1"
+        />
+
 </LinearLayout>
