--- a/app/src/main/res/layout/list_item_result.xml
+++ b/app/src/main/res/layout/list_item_result.xml
@@ -19,8 +19,11 @@
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_delete"
+        android:src="@drawable/ic_delete_forever_black_24dp"
         android:layout_weight="1"
+        android:background="#0000"
+        android:alpha="10"
+        android:layout_gravity="center_vertical"
         />
 
 </LinearLayout>
