Dodanie możliwości losowania na kilku kostkach, dodanie listy przewijalnej

--- a/app/src/main/res/layout/activity_standard.xml
+++ b/app/src/main/res/layout/activity_standard.xml
@@ -38,6 +38,7 @@
         android:layout_centerHorizontal="true"
         app:fabSize="auto"
         android:src="@drawable/ic_dice_5_black_48dp"
+        android:layout_marginBottom="5dp"
         />
 
 </RelativeLayout>
