--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,6 @@
         android:gravity="center"
         android:text="Set rolling range and hit ROLL button to roll the Dice" />
 
-    <EditText
-        android:id="@+id/minimal_value_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/main_text"
-        android:paddingTop="20dp"
-        android:inputType="number"
-        android:hint="@string/_1"/>
-
     <TextView
         android:id="@+id/set_min_value_text"
         android:layout_width="wrap_content"
@@ -37,33 +27,77 @@
         android:text="@string/set_minimal_dice_value"
         android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/set_max_value_text"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/roll_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/set_min_value_text"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_dice_5_black_48dp"
+        android:layout_marginBottom="5dp"
+        />
+
+    <EditText
+        android:id="@+id/minimal_value_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:text="@string/_1"
+        android:textSize="20sp"
+        android:layout_alignBaseline="@+id/set_min_value_text"
+        android:layout_alignBottom="@+id/set_min_value_text"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:id="@+id/number_of_dices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:inputType="number"
+        android:textSize="20dp"
+        android:layout_alignBaseline="@+id/set_number_of_dices_text"
+        android:layout_alignBottom="@+id/set_number_of_dices_text"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/set_number_of_dices_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:text="@string/set_maximal_dice_value"
-        android:textSize="20sp" />
+        android:text="Set number of dices:"
+        android:textSize="20sp"
+        android:layout_below="@+id/set_max_value_text"
+        android:layout_alignParentStart="true" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_of_results"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/set_number_of_dices_text"
+        android:paddingTop="5dp"
+        android:layout_alignParentStart="true">
+
+    </android.support.v7.widget.RecyclerView>
 
     <EditText
         android:id="@+id/maximum_value_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/minimal_value_field"
-        android:hint="@string/_6"
+        android:text="@string/_6"
         android:inputType="number"
-        android:paddingTop="20dp" />
+        android:textSize="20dp"
+        android:layout_below="@+id/minimal_value_field"
+        android:layout_alignBaseline="@+id/set_max_value_text"
+        android:layout_alignBottom="@+id/set_max_value_text"
+        android:layout_alignParentEnd="true" />
 
-    <Button
-        android:id="@+id/roll_button"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/set_max_value_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/roll"
-        android:textSize="50sp"
-        android:layout_below="@+id/maximum_value_field"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:paddingTop="20dp"
+        android:text="@string/set_maximal_dice_value"
+        android:textSize="20sp"
+        android:layout_below="@+id/set_min_value_text"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
